<resources>
    <string name="app_name">CamAPSSidekick</string>

    <!-- Preference Strings -->
    <string name="general_prefs_title">General</string>

    <string name="display_sleep">Allow Display to Sleep</string>
    <string name="display_sleep_sum_on">Display Can Sleep</string>
    <string name="display_sleep_sum_off">Display Cannot Sleep</string>

    <string name="display_dark">Dark Display</string>

    <string name="bg_units">Units</string>

    <string name="insulin_prefs_title">Insulin</string>
    <string name="insulin_duration">Duration of Action (mins)</string>
    <string name="insulin_onset">Onset of Action (mins)</string>
    <string name="insulin_peak">Peak of Action (mins)</string>

    <string name="diasend_pref_title">Pull from Diasend</string>
    <string name="diasend_enable">Enable</string>
    <string name="diasend_username">Username</string>
    <string name="diasend_password">Password</string>

    <string name="camaps_pref_title">Pull from CamAPS</string>
    <string name="camaps_summary">If CamAPS is on this phone, this app can listen to BGL readings</string>
    <string name="camaps_enable_title">Enable BGL readings from CamAPS</string>

</resources>